Store list of values for key.. wip